--- a/.github/workflows/my-workflow.yaml
+++ b/.github/workflows/my-workflow.yaml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: my-org/reusable-actions
-          token: ${{ secrets.TOKEN}}
+          # token: ${{ secrets.TOKEN}} We won't use this within this example repository, as it is public for your sake
           path: reusable-actions
       - name: Run reusable workflow
         uses: ./reusable-actions/hello-world.yaml
